template/svc-clean.yaml
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
    labels:
      app: quotesapi
    name: quotesapi
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deploymentconfig: quotesapi
    sessionAffinity: None
    type: ClusterIP
