template/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2021-02-18T18:46:19Z"
    labels:
      app: quotesapi
      app.kubernetes.io/component: quotesapi
      app.kubernetes.io/instance: quotesapi
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/generated-by: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
        f:spec:
          f:ports:
            .: {}
            k:{"port":8080,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
            k:{"port":8443,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:deploymentconfig: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: oc
      operation: Update
      time: "2021-02-18T18:46:19Z"
    name: quotesapi
    namespace: durga-haridoss-rbc-com-quotes-dev
    resourceVersion: "2892756"
    selfLink: /api/v1/namespaces/durga-haridoss-rbc-com-quotes-dev/services/quotesapi
    uid: c9baf86e-5c8f-421c-81fa-0e535397f8bb
  spec:
    clusterIP: 172.30.83.108
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deploymentconfig: quotesapi
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2021-02-18T18:46:10Z"
    labels:
      app: quotesdb
      app.kubernetes.io/component: quotesdb
      app.kubernetes.io/instance: quotesdb
      app.kubernetes.io/name: mysql
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/generated-by: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/name: {}
        f:spec:
          f:ports:
            .: {}
            k:{"port":3306,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:deploymentconfig: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: oc
      operation: Update
      time: "2021-02-18T18:46:10Z"
    name: quotesdb
    namespace: durga-haridoss-rbc-com-quotes-dev
    resourceVersion: "2892636"
    selfLink: /api/v1/namespaces/durga-haridoss-rbc-com-quotes-dev/services/quotesdb
    uid: 80e7eb62-9703-4fef-9863-6a42ca79b5e3
  spec:
    clusterIP: 172.30.119.25
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      deploymentconfig: quotesdb
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
